--- a/app/views/main.html
+++ b/app/views/main.html
@@ -9,6 +9,7 @@
       <th>Nickname</th>
       <th>+/-</th>
       <th>Last Update</th>
+      <th><span class="glyphicon glyphicon-trash"></span></th>
     </tr>
     <tr ng-repeat="place in places | orderByPriority | orderBy:'timestamp':'desc'" ng-click="selectPlace(place)" ng-class="selectedPlace == place ? 'active' : ''">
       <td>
@@ -19,6 +20,9 @@
       <td>{{ place.$id }}</td>
       <td>{{ place.coords.accuracy | number:0 }}m</td>
       <td>{{ place.timestamp | date : 'short' }}</td>
+      <th>
+	<span ng-if="!place.connections" class="glyphicon glyphicon-trash" ng-click="deletePlace(place.$id); $event.stopPropagation()"></span>
+      </th>
     </tr>
   </table>
 </div>
