--- a/app/views/login.html
+++ b/app/views/login.html
@@ -3,14 +3,18 @@
     <form role="form" name="loginForm" ng-submit="loginForm.nickname.$valid && submit()">
       <div class="form-group">
 	<label for="inputNickname">Your Nickname</label>
-	<input name="nickname" ng-pattern="/^[^\.\$\[\]\#\/]+$/" ng-model="nickname" type="text" class="form-control" id="inputNickname" placeholder="Your Nickname" autofocus>
+	<input name="nickname" ng-pattern="/^[^\.\$\[\]\#\/]+$/" ng-model="nickname" type="text" class="form-control" id="inputNickname" placeholder="Your Nickname" autofocus required>
       </div>
       <div class="error-container" ng-show="loginForm.nickname.$dirty && loginForm.nickname.$invalid">
 	<small class="error">
 	  Nickname cannot contain some special chars, sorry!
 	</small>
       </div>
-      <button ng-show="loginForm.nickname.$valid" type="submit" class="btn btn-default">Submit</button>
+      <div class="form-group">
+	<label for="inputRoomname">Room Name</label>
+	<input name="roomName" ng-pattern="/^[a-zA-Z0-9]+$/" ng-model="roomName" type="text" class="form-control" id="inputRoomName" placeholder="Room Name" {{roomName ? '' : readonly}} required>
+      </div>
+      <button ng-show="loginForm.nickname.$valid && loginForm.roomName.$valid" type="submit" class="btn btn-default">Submit</button>
     </form>
   </div>
 </div>
