minor fixes here and there

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,4 +25,5 @@
       </th>
     </tr>
   </table>
+  <button class="btn btn-default center-block" ng-click="login()">Change Room or Nickname</button>
 </div>
