refactoring and bug fixes
- save the room name in cookie
- better UI
- minor fixes with document ready and not showing the map on route changes

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -25,5 +25,7 @@
       </th>
     </tr>
   </table>
-  <button class="btn btn-default center-block" ng-click="login()">Change Room or Nickname</button>
+  <p style="padding-bottom: 1em;">
+    <button class="btn btn-default center-block" ng-click="login()">Change Room ({{roomName}}) or Nickname ({{nickname}})</button>
+  </p>
 </div>
