--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,8 +1,8 @@
 <div id="menu">
- <a ng-click="mapCanvasStyle={height:list ? '100%' : '70%'};list=!list;"> ☰ </a>
+ <a ng-click="list=!list;"> ☰ </a>
 </div>
-<div id="map_canvas" ng-style="mapCanvasStyle" style="width: 100%; height: 100%;"></div>
-<div ng-show="list">
+<div id="map_canvas" ng-class="list ? 'list_visible' : 'full_screen'"></div>
+<div ng-show="list" id="list">
   <table class="table table-stripped">
     <tr>
       <th>Status</th>
