--- a/app/views/main.html
+++ b/app/views/main.html
@@ -29,6 +29,6 @@
     </tr>
   </table>
   <p style="padding-bottom: 1em;">
-    <button class="btn btn-default center-block" ng-click="login()">Change Room ({{roomName}}) or Nickname ({{nickname}})</button>
+    <button class="btn btn-default center-block" ng-click="login()">Change Room ({{settings.roomName}}) or Nickname ({{settings.nickname}})</button>
   </p>
 </div>
