--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,31 +1,50 @@
 <div id="menu">
  <a ng-click="list=!list;"> ☰ </a>
 </div>
+<div id="gps_info">
+  <span class="label label-danger" ng-if="!gpsPosition.coords">
+    <span class="glyphicon glyphicon-signal"></span>
+    NO GPS</span>
+  <span ng-if="gpsPosition.coords.accuracy < 50" class="label label-success" >
+    <span class="glyphicon glyphicon-signal"></span>
+    +/- {{gpsPosition.coords.accuracy | niceDistance}}</span>
+  <span class="label label-warning" ng-if="gpsPosition.coords.accuracy >= 50">
+    <span class="glyphicon glyphicon-signal"></span>
+    +/- {{gpsPosition.coords.accuracy | niceDistance}}</span>
+</div>
 <div id="map_canvas" ng-class="list ? 'list_visible' : 'full_screen'"></div>
-<div ng-show="list" id="list">
+<div ng-show="list" id="list" ng-init="showActions = {}">
   <table class="table table-stripped">
     <tr>
       <th>Status</th>
-      <th>Nickname</th>
-      <th>Dist</th>
-      <th>Last Update</th>
-      <th><span class="glyphicon glyphicon-trash"></span></th>
+      <th>Name</th>
+      <th>Dist.</th>
+      <th>Update</th>
     </tr>
-    <tr ng-repeat="place in places | orderByPriority | filter:placeFilter | orderBy:'timestamp':'desc'" ng-click="selectPlace(place)" ng-class="selectedPlace == place ? 'active' : ''">
-      <td>
+    <tr ng-repeat="place in places | orderByPriority | filter:placeFilter | orderBy:'timestamp':'desc'" ng-click="selectPlace(place)" ng-class="selectedPlace == place ? 'active' : ''" ng-swipe-left="showActions[place.$id] = true"  ng-swipe-right="showActions[place.$id] = false">
+      <td ng-hide="showActions[place.$id]">
 	<span ng-class="place.connections ? 'label label-success' : 'label label-info'">
 	  {{ place.connections ? 'online' : 'offline' }}
 	</span>
       </td>
       <td>{{ place.$id }}</td>
-      <td>
+      <td ng-hide="showActions[place.$id]">
 	{{ distanceTo(place.coords) | niceDistance }} (+/-
 	{{ place.coords.accuracy | niceDistance }})
       </td>
-      <td>{{ place.timestamp | niceDate }}</td>
-      <th>
-	<span ng-if="!place.connections" class="glyphicon glyphicon-trash" ng-click="deletePlace(place.$id); $event.stopPropagation()"></span>
-      </th>
+      <td ng-hide="showActions[place.$id]">
+	  {{ place.timestamp | niceDate }}
+      </td>
+      <td ng-show="showActions[place.$id]" colspan="3" class="actions" style="text-align: right;">
+	<button ng-if="!place.connections" class="btn btn-danger" ng-click="deletePlace(place.$id); showActions[place.$id] = false; $event.stopPropagation()">
+	  <span class="glyphicon glyphicon-trash"></span>
+	  User
+	</button>
+	<button class="btn btn-warning" ng-click="deletePath(place.$id); showActions[place.$id] = false; $event.stopPropagation()">
+	  <span class="glyphicon glyphicon-trash"></span>
+	  Path
+	</button>
+      </td>
     </tr>
   </table>
   <p style="padding-bottom: 1em;">
