--- a/app/views/main.html
+++ b/app/views/main.html
@@ -48,6 +48,6 @@
     </tr>
   </table>
   <p style="padding-bottom: 1em;">
-    <button class="btn btn-default center-block" ng-click="login()">Change Room ({{settings.data.roomName}}) or Nickname ({{settings.data.nickname}})</button>
+    <button class="btn btn-default center-block" ng-click="login(true)">Change Room ({{settings.data.roomName}}) or Nickname ({{settings.data.nickname}})</button>
   </p>
 </div>
